Fix spacing between nickname and message in own MUC history
Test-Information:

Joined a room with MUC history and verified that the spacing
between nickname and message is always the same.

--- a/Swift/resources/themes/Default/main.css
+++ b/Swift/resources/themes/Default/main.css
@@ -226,19 +226,19 @@ body {
     word-break: break-all; /* Break long URLs at any point. */
 }
 
-.myusername {
-    color: #92c47e;
+.username {
     margin-left: 20px;
     font-weight: 700;
     margin-top: 0px;
     margin-bottom: 0.2em;
 }
 
+.myusername {
+    color: #92c47e;
+}
+
 .otherusername {
     color: #6eb6ce;
-    margin-left: 20px;
-    font-weight: 700;
-    margin-top: 0px;
 }
 
 .message-content {
